Ensure correct execution of GET requests in REST-API
- Do not use JSON body for GET requests but request parameters
- Change to fetch-based API instead of axios to avoid dependency
- Fix incorrect type of WorkspaceListRequest in common
- Fix NPE in appId evaluation
