# java/service/org.eclipse.theia.cloud.service/src/main/java/org/eclipse/theia/cloud/service/workspace/WorkspaceResource.java
@@ -24,6 +24,7 @@ import javax.ws.rs.DELETE;
 import javax.ws.rs.GET;
 import javax.ws.rs.POST;
 import javax.ws.rs.Path;
+import javax.ws.rs.PathParam;
 
 import org.eclipse.microprofile.openapi.annotations.Operation;
 import org.eclipse.theia.cloud.common.k8s.resource.Workspace;
@@ -35,7 +36,9 @@ public class WorkspaceResource extends BaseResource {
 
     @Operation(summary = "List workspaces", description = "Lists the workspaces of a user.")
     @GET
-    public List<UserWorkspace> list(WorkspaceListRequest request) {
+    @Path("/{appId}/{user}")
+    public List<UserWorkspace> list(@PathParam("appId") String appId, @PathParam("user") String user) {
+	WorkspaceListRequest request = new WorkspaceListRequest(appId, user);
 	String correlationId = generateCorrelationId();
 	if (!isValidRequest(request)) {
 	    info(correlationId, "List workspaces call without matching appId: " + request.appId);
